testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment6.errors.txt
a.js(1,7): error TS2339: Property 'Inner' does not exist on type 'typeof Outer'.
a.js(5,7): error TS2339: Property 'i' does not exist on type 'typeof Outer'.
b.js(1,18): error TS2339: Property 'i' does not exist on type 'typeof Outer'.


==== def.js (0 errors) ====
    class Outer {}
    
==== a.js (2 errors) ====
    Outer.Inner = class I {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type 'typeof Outer'.
        messages() { return [] }
    }
    /** @type {!Outer.Inner} */
    Outer.i
          ~
!!! error TS2339: Property 'i' does not exist on type 'typeof Outer'.
    
==== b.js (1 errors) ====
    var msgs = Outer.i.messages()
                     ~
!!! error TS2339: Property 'i' does not exist on type 'typeof Outer'.
    
    /** @param {Outer.Inner} inner */
    function x(inner) {
    }
    